Further UI updates

--- a/public/how.html
+++ b/public/how.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <title>SafeSense LIVE</title>
+    <title>Database</title>
     <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200">
     <link rel="stylesheet" href="./Assets/Css/safeStyling.css">
@@ -54,35 +54,8 @@
         </div>
         </div>
       </nav>
-    <div class="jumbotron">
-        <h1 class="display-4" style="text-align: center;"><b>SafeSense LIVE</b></h1>
-        <p class="lead" style="text-align: center;">Live Stream Data, Access a database,
-        and more!</p>
-        <hr class="my-4">
-        <p class="lead">
-          <a class="btn btn-primary btn-lg" href="how.html" role="button">Learn more</a>
-        </p>
-      </div>
-    <div class="aboutSection">
-      <h3 style="text-align: center;">About this web application</h3>
-        <br />
-      <p><em>This web application was developed to provide a scalable solution to
-        SAFESENSE TECHNOLOGIES Smart Helmet needs. It allows you to access, read,
-        and view graphical information from a database of helmet readings per category.
-        Additionally, The web application features modes that allow you to quickly
-        configure live test streaming, drop tests, and see relevant information in
-        a numerical and graphical way.
-      </em></p>
-    </div>
-    <div class="footerContainer">
-      <footer class="page-footer" font-small teal pt-4>
-        <div class="footer-copyright text-center py-3">
-          <p>
-            Made with ☕ by SAFESENSE TECHNOLOGIES
-            <br><b>@2018 Copyright: SAFESENSE TECHNOLOGIES, L.L.C.</b>
-          </p>
-        </div>
-      </footer>
-    </div>
+    <p>
+      Temp holder till of how to use web app
+    </p>
   </body>
 </html>
