--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <title>SafeSense LIVE</title>
+    <meta name="description" content="HomePage for SafeSense LIVE" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta description="Realtime helmet impact sensing" />
+    <meta property="og:site_name" content="SafeSense Technologies" />
+    <meta property="og:url" content="http://safesensetech.com" />
+    <meta property="og:title" content="SafeSense Technologies - Realtime impact sensing" />
+    <meta property="og:type" content="website" />
+    <meta property="description" content=" SafeSense Technologies provides Realtime impact sensing
+    for a variety of sports." />
+
     <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200">
     <link rel="stylesheet" href="./Assets/Css/safeStyling.css">
     <link rel="icon" type="image/png" href="./Assets/Images/siteIcon.jpg"/>
-    <meta name="description" content="HomePage for SafeSense LIVE" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="UTF-8">
+    <link rel="cannonical" href="http://www.safesensetech.com" />
+    <title>SafeSense LIVE</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
@@ -19,8 +28,18 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
+    <!--***DEFINE 3D MODEL SCRIPTS***-->
+    <script src="./Scripts/WebGL/three.min.js"></script>
+    <script src="./Scripts/WebGL/OrbitControls.js"></script>
+    <script src="./Scripts/WebGL/OBJLoader.js"></script>
+    <script src="./Scripts/WebGL/MTLLoader.js"></script>
+    <!--*** END DEFINE 3D MODEL SCRIPTS***-->
+
+    <!--Main script for page 3D models-->
+    <script src="./Scripts/index3D.js"></script>
   </head>
   <body>
+    <main>
     <nav class="navbar navbar-expand-lg">
       <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -34,7 +53,12 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="how.html">
-                How?
+                Site help
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">
+                About us
               </a>
             </li>
           </ul>
@@ -74,15 +98,17 @@
         a numerical and graphical way.
       </em></p>
     </div>
-    <div class="footerContainer">
-      <footer class="page-footer" font-small teal pt-4>
-        <div class="footer-copyright text-center py-3">
-          <p>
-            Made with ☕ by SAFESENSE TECHNOLOGIES
-            <br><b>@2018 Copyright: SAFESENSE TECHNOLOGIES, L.L.C.</b>
-          </p>
-        </div>
-      </footer>
+    <div id="index3DCanvas">
+
     </div>
+  </main>
+    <footer class="page-footer" font-small teal pt-4>
+      <div class="footer-copyright text-center py-3">
+        <p>
+          Made with ☕ by SAFESENSE TECHNOLOGIES
+          <br><b>@2019 Copyright: SAFESENSE TECHNOLOGIES, L.L.C.</b>
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
