--- a/public/how.html
+++ b/public/how.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <title>Database</title>
+    <title>How to use SafeSense LIVE</title>
     <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:200">
     <link rel="stylesheet" href="./Assets/Css/safeStyling.css">
@@ -34,7 +34,12 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="how.html">
-                How?
+                Site help
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html">
+                About us
               </a>
             </li>
           </ul>
