Force Graph Update

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -73,11 +73,6 @@
         <img src="./Assets/Images/SafeSense Technologies (Logo).jpg" height="55px"/>
         <h2>Realtime Channel Updates</h2>
       </div>
-        <header>
-            <div id="logout" class="logout">
-               <a href="/logout">Logout</a>
-            </div>
-        </header>
         <section>
            <div id="loader" class="loader">
               Loading...
@@ -159,6 +154,10 @@
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
         <script src="https://d3js.org/d3.v5.min.js"></script>
-        <script type="text/javascript" src="./Scripts/main.js"></script>
+        <script type="text/javascript" src="./Scripts/ChartRendering/chartBarGraph.js"></script>
+        <script type="text/javascript" src="./Scripts/ChartRendering/chartLineGraph.js"></script>
+        <script type="text/javascript" src="./Scripts/ChartRendering/diffLineGraph.js"></script>
+        <script type="text/javascript" src="./Scripts/ChartRendering/renderCharts.js"></script>
+        <script type="text/javascript" src="./Scripts/dashboard.js"></script>
     </body>
 </html>
