--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -37,7 +37,7 @@
             <script src="./Scripts/HeadImpactModel.js"></script>
 
     </head>
-    <body onload="renderCircles(); loadModel();">
+    <body onload="loadModel();">
       <nav class="navbar navbar-expand-lg">
         <button class="navbar-toggler navbar-light" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
