--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -80,25 +80,11 @@
         <img src="./Assets/Images/SafeSense Technologies (Logo).jpg" height="55px"/>
         <h2>Realtime Channel Updates</h2>
       </div>
-      <div id="graphCtrl">
-        <div class="row">
-          <div class="col-sm-12">
-            <div class="widthSlider">
-              <h4>Time width control</h4>
-              <p>Time width: <span id="wValue"></span></p>
-              <input type="range" min="20" max="100" value="50" id="wSlider" />
-            </div>
-            <div class="sampleSlider">
-              <h4>Sample rate control</h4>
-              <p>Sample rate: <span id="rValue"></span></p>
-              <input type="range" min="10" max="500" value="100" id="rSlider" />
-            </div>
-          </div>
-        </div>
+      <div>
+        <section id="loading-screen">
+           <div id="loader"></div>
+        </section>
       </div>
-           <div id="loader" class="loader">
-              Loading...
-           </div>
            <div class="containerStack">
              <div class="row">
                <div class="col-sm-12">
@@ -121,79 +107,18 @@
              </div>
            </div>
          </div>
-
-         <!-- <canvas id="diffChart"></canvas> -->
-      <br />
-      <br />
-      <div id="sensorCirclesSec">
-        <canvas id="sensorCircles1" height="200" width="200">
-        </canvas>
-        <canvas id="sensorCircles2" height="200" width="200">
-        </canvas>
-        <canvas id="sensorCircles3" height="200" width="200">
-        </canvas>
-        <canvas id="sensorCircles4" height="200" width="200">
-        </canvas>
-        <canvas id="sensorCircles5" height="200" width="200">
-        </canvas>
-        <canvas id="sensorCircles6" height="200" width="200">
-        </canvas>
-        <canvas id="sensorCircles7" height="200" width="200">
-        </canvas>
-        <canvas id="sensorCircles8" height="200" width="200">
-        </canvas>
-        <canvas id="sensorCircles9" height="200" width="200">
-        </canvas>
-        <canvas id="sensorCircles10" height="200" width="200">
-        </canvas>
-        <canvas id="sensorCircles11" height="200" width="200">
-        </canvas>
-        <canvas id="sensorCircles12" height="200" width="200">
-        </canvas>
-        <canvas id="sensorCircles13" height="200" width="200">
-        </canvas>
-        <canvas id="sensorCircles14" height="200" width="200">
-        </canvas>
-        <canvas id="sensorCircles15" height="200" width="200">
-        </canvas>
-        <canvas id="sensorCircles16" height="200" width="200">
-        </canvas>
-        <br />
-      </div>
-
-        <!-- <section>
-          <canvas id="barChannelChart" class="hide"></canvas>
-        </section> -->
-        <div id="HeadImpactModel">
-
-
-
-        </div>
-
-       <script>
-          var wslider = document.getElementById("wSlider");
-          var woutput = document.getElementById("wValue");
-          var rslider = document.getElementById("rSlider");
-          var routput = document.getElementById("rValue");
-//TODO: Place into dashboard.js and update via ajax
-          woutput.innerHTML = wslider.value;
-          timeWidthDisplay = wslider.value;
-
-          sampleRate = rslider.value;
-          routput.innerHTML = rslider.value;
-
-          wslider.oninput = function() {
-          woutput.innerHTML = this.value;
-          };
-
-          rslider.oninput = function(){
-            routput.innerHTML = this.value;
-          };
-        </script>
-
+         <br />
+         <br />
+         <br />
+         <br />
+        <div id="HeadImpactModel"></div>
         <script type="text/javascript">
         $(function () {
-        $('.grid-stack').gridstack();
+          var options = {
+              cellHeight: 80,
+              verticalMargin: 10
+            };
+        $('.grid-stack').gridstack(options);
         });
         </script>
 
